--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <title>Chatbot</title>
   <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
+
+<body>
 
 <body>
   <form id="chatForm">
@@ -19,12 +21,12 @@
         <div class="chat-input">
           <input id="chatInput" />
         </div>
-        <div id="dave" class="chat-pane"></div>
+        <div id="ejaz" class="chat-pane"></div>
         <div id="hal" class="chat-pane"></div>
       </div>
     </div>
   </form>
-  <script src="js/main.js"></script>
 </body>
-
+  <script src="js/index.js"></script>
+</body>
 </html>
