--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
   </form>
 </body>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src="js/index.js"></script>
 </body>
 </html>
